--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+idea/
+
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -24,7 +26,6 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
-*.idea
 
 # Unity3D generated meta files
 *.pidb.meta
