--- a/Mincraft/Packages/manifest.json
+++ b/Mincraft/Packages/manifest.json
@@ -5,15 +5,15 @@
     "com.unity.ads": "2.3.1",
     "com.unity.analytics": "3.3.2",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "0.0.9-preview.12",
-    "com.unity.ide.rider": "1.1.0",
+    "com.unity.collections": "0.1.1-preview",
+    "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.0.7",
     "com.unity.mathematics": "1.1.0",
+    "com.unity.memoryprofiler": "0.1.0-preview.9",
     "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.purchasing": "2.0.6",
     "com.unity.test-framework": "1.1.1",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.3.7",
     "com.unity.modules.ai": "1.0.0",
